fixed overflow

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -23,6 +23,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+	overflow-x: hidden;
 }
 
 #root {
